--- a/profil.html
+++ b/profil.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Profil Mahasiswa</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Profil Mahasiswa</h1>
+    </header>
 </body>
 </html>
