--- a/profil.html
+++ b/profil.html
@@ -2,13 +2,83 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profil Mahasiswa</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <header>
         <h1>Profil Mahasiswa</h1>
     </header>
+
+    <nav>
+        <ul>
+            <li><a href="#" onclick="showContent('biodata')">Biodata</a></li>
+            <li><a href="#" onclick="showContent('pendidikan')">Pendidikan</a></li>
+            <li><a href="#" onclick="showContent('pengalaman')">Pengalaman</a></li>
+            <li><a href="#" onclick="showContent('keahlian')">Keahlian</a></li>
+        </ul>
+    </nav>
+
+    <section id="Content">
+        <div id="biodata">
+        <h2>Biodata</h2>
+        <p><strong>NIM:</strong> 0423087102</p>
+        <p><strong>Nama:</strong>barry</p>
+        <p><strong>Agama:</strong> Islam</p>
+        <p><strong>Tanggal Lahir:</strong> 23 Agustus 1971</p>
+        <p><strong>Tempat Lahir:</strong> Jakarta</p>
+    </div>
+    <div id="pendidikan" style="display:none;">
+        <h2>Pendidikan</h2>
+        <p><strong>SD:</strong> Tadika Mesra</p>
+        <p><strong>Smp:</strong> smp 77</p>
+        <p><strong>Sma:</strong> SMA 7777</p>
+        <p><strong>Kuliah:</strong> UPJ</p>
+    </div>
+    <div id="pengalaman" style="display:none;">
+        <h2>Pengalaman</h2>
+        <p>[Masukkan Informasi Pengalaman]</p>
+    </div>
+    <div id="keahlian" style="display:none;">
+        <h2>Keahlian</h2>
+        <p>[Masukkan Informasi Keahlian]</p>
+    </div>
+    </section>
+
+    <aside>
+        <h2>Hobi</h2>
+        <ul>
+            <li>Bulu Tangkis</li>
+            <li>Bola</li>
+            <li>Pemrograman</li>
+        </ul>
+    </aside>
+
+    <footer>
+        <div class="footer-left">
+            <p>Twitter: @akun</p>
+            <p>FB: @akun</p>
+            <p>Instagram: @akun</p>
+        </div>
+        <div class="footer-right">
+            <p>Nama Web</p>
+            <p>Slogan/Keterangan/Informasi Web</p>
+        </div>
+        <div class="footer-center">
+            <p>&copy; Copyright 2020. All Rights Reserved</p>
+        </div>
+    </footer>
+
+    <script>
+        function showContent(sectionId) {
+            document.getElementById('biodata').style.display = 'none';
+            document.getElementById('pendidikan').style.display = 'none';
+            document.getElementById('pengalaman').style.display = 'none';
+            document.getElementById('keahlian').style.display = 'none';
+            document.getElementById(sectionId).style.display = 'block';
+        }
+    </script>
 </body>
 </html>
