--- a/profil.html
+++ b/profil.html
@@ -24,11 +24,11 @@
     <section id="Content">
         <div id="biodata">
         <h2>Biodata</h2>
-        <p><strong>NIM:</strong> 0423087102</p>
+        <p><strong>NIM:</strong> 2023081016/p>
         <p><strong>Nama:</strong>barry</p>
         <p><strong>Agama:</strong> Islam</p>
-        <p><strong>Tanggal Lahir:</strong> 23 Agustus 1971</p>
-        <p><strong>Tempat Lahir:</strong> Jakarta</p>
+        <p><strong>Tanggal Lahir:</strong> 27 Juni 2005</p>
+        <p><strong>Tempat Lahir:</strong> Tanggerang Selatan</p>
     </div>
     <div id="pendidikan" style="display:none;">
         <h2>Pendidikan</h2>
