--- a/profil.html
+++ b/profil.html
@@ -25,25 +25,25 @@
         <div id="biodata">
         <h2>Biodata</h2>
         <p><strong>NIM:</strong> 2023081016/p>
-        <p><strong>Nama:</strong>barry</p>
+        <p><strong>Nama:</strong> Barry Caesar S.H.J</p>
         <p><strong>Agama:</strong> Islam</p>
         <p><strong>Tanggal Lahir:</strong> 27 Juni 2005</p>
         <p><strong>Tempat Lahir:</strong> Tanggerang Selatan</p>
     </div>
     <div id="pendidikan" style="display:none;">
         <h2>Pendidikan</h2>
-        <p><strong>SD:</strong> Tadika Mesra</p>
-        <p><strong>Smp:</strong> smp 77</p>
-        <p><strong>Sma:</strong> SMA 7777</p>
-        <p><strong>Kuliah:</strong> UPJ</p>
+        <p><strong>SD:</strong> Azzahra</p>
+        <p><strong>Smp:</strong> Muhammadiyah 22 Pamulang</p>
+        <p><strong>Sma:</strong> Muhammadiyah 25 Pamulang</p>
+        <p><strong>Kuliah:</strong> Universitas Pembangunan Jaya</p>
     </div>
     <div id="pengalaman" style="display:none;">
         <h2>Pengalaman</h2>
-        <p>[Masukkan Informasi Pengalaman]</p>
+        <p>- Himpunan Mahasiswa Periode 2023-2024</p>
     </div>
     <div id="keahlian" style="display:none;">
         <h2>Keahlian</h2>
-        <p>[Masukkan Informasi Keahlian]</p>
+        <p>Saya mengerti cara menggunakan Visual Studio Code dengan baik dan benar, dan juga saya sanggup menggunakan bahasa pemrograman lain seperti Python dan JavaScript</p>
     </div>
     </section>
 
@@ -58,16 +58,16 @@
 
     <footer>
         <div class="footer-left">
-            <p>Twitter: @akun</p>
-            <p>FB: @akun</p>
-            <p>Instagram: @akun</p>
+            <p>Twitter: @Bery</p>
+            <p>FB: @Bery</p>
+            <p>Instagram: @Bery_sye</p>
         </div>
         <div class="footer-right">
-            <p>Nama Web</p>
-            <p>Slogan/Keterangan/Informasi Web</p>
+            <p>Profil Barry</p>
+            <p>Website ini merupakan Website Profil dari Barry Caesar S.H.J</p>
         </div>
         <div class="footer-center">
-            <p>&copy; Copyright 2020. All Rights Reserved</p>
+            <p>&copy; Copyright 2023. All Rights Reserved</p>
         </div>
     </footer>
 
