--- a/profil.html
+++ b/profil.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Profil Mahasiswa</h1>
     </header>
-
+<div class="content-wrapper">
     <nav>
         <ul>
             <li><a href="#" onclick="showContent('biodata')">Biodata</a></li>
@@ -55,7 +55,7 @@
             <li>Pemrograman</li>
         </ul>
     </aside>
-
+</div>
     <footer>
         <div class="footer-left">
             <p>Twitter: @Bery</p>
