Merubah beberapa biodata

--- a/profil.html
+++ b/profil.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profil Mahasiswa</title>
+    <title>Profil Barry</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header>
-        <h1>Profil Mahasiswa</h1>
+        <div class="header-content">
+            <img src="" class="profile-photo">
+            <h1>Profil Barry Caesar S.H.J</h1>
+        </div>
     </header>
 <div class="content-wrapper">
     <nav>
@@ -23,7 +26,7 @@
 
     <section id="Content">
         <div id="biodata">
-        <h2>Biodata</h2>
+        <h2>Biodata😉</h2>
         <p><strong>NIM:</strong> 2023081016/p>
         <p><strong>Nama:</strong> Barry Caesar S.H.J</p>
         <p><strong>Agama:</strong> Islam</p>
@@ -31,28 +34,35 @@
         <p><strong>Tempat Lahir:</strong> Tanggerang Selatan</p>
     </div>
     <div id="pendidikan" style="display:none;">
-        <h2>Pendidikan</h2>
-        <p><strong>SD:</strong> Azzahra</p>
+        <h2>Pendidikan😁</h2>
+        <p><strong>SD:</strong> SDIT Azzahra</p>
         <p><strong>Smp:</strong> Muhammadiyah 22 Pamulang</p>
         <p><strong>Sma:</strong> Muhammadiyah 25 Pamulang</p>
         <p><strong>Kuliah:</strong> Universitas Pembangunan Jaya</p>
     </div>
     <div id="pengalaman" style="display:none;">
-        <h2>Pengalaman</h2>
-        <p>- Himpunan Mahasiswa Periode 2023-2024</p>
+        <h2>Pengalaman😏</h2>
+        <p><strong>▪️</strong> Himpunan Mahasiswa Periode 2023-2024</p>
+        <p><strong>▪️</strong> Panitia CS4ALL bagian keamanan</p>
+        <p><strong>▪️</strong> Panitia GCP bagian perlengkapan</p>
+        <p><strong>▪️</strong> Panitia Progeth 2023 bagian keamanan</p>
     </div>
     <div id="keahlian" style="display:none;">
-        <h2>Keahlian</h2>
-        <p>Saya mengerti cara menggunakan Visual Studio Code dengan baik dan benar, dan juga saya sanggup menggunakan bahasa pemrograman lain seperti Python dan JavaScript</p>
+        <h2>Keahlian😎</h2>
+        <p><strong>▪️</strong> Menggunakan Java dengan baik</p>
+        <p><strong>▪️</strong> Mengerti algoritma Python</p>
+        <p><strong>▪️</strong> Mampu menggunakan PHP</p>
+        <p><strong>▪️</strong> Sanggup menambah beberapa function JavaScript</p>
     </div>
     </section>
 
     <aside>
         <h2>Hobi</h2>
         <ul>
-            <li>Bulu Tangkis</li>
-            <li>Bola</li>
-            <li>Pemrograman</li>
+            <li>Bermain Game</li>
+            <li>Membaca Buku</li>
+            <li>Ngoding</li>
+            <li>Nongkrong</li>
         </ul>
     </aside>
 </div>
@@ -63,7 +73,7 @@
             <p>Instagram: @Bery_sye</p>
         </div>
         <div class="footer-right">
-            <p>Profil Barry</p>
+            <p>Profil Barry😳</p>
             <p>Website ini merupakan Website Profil dari Barry Caesar S.H.J</p>
         </div>
         <div class="footer-center">
