menambahkan img di atas text

--- a/profil.html
+++ b/profil.html
@@ -10,7 +10,7 @@
 
     <header>
         <div class="header-content">
-            <img src="" class="profile-photo">
+            <img src="foto ktm.jpg" alt="Profil Barry Caesar" class="profile-photo">
             <h1>Profil Barry Caesar S.H.J</h1>
         </div>
     </header>
