--- a/profil.html
+++ b/profil.html
@@ -27,7 +27,7 @@
     <section id="Content">
         <div id="biodata">
         <h2>Biodata😉</h2>
-        <p><strong>NIM:</strong> 2023081016/p>
+        <p><strong>NIM:</strong> 2023081016</p>
         <p><strong>Nama:</strong> Barry Caesar S.H.J</p>
         <p><strong>Agama:</strong> Islam</p>
         <p><strong>Tanggal Lahir:</strong> 27 Juni 2005</p>
